Removing unimportant html stuff

--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="container" sec:authorize="!isAuthenticated()">
             <div>
-                Login with Reddit: <a class="btn btn-primary" href="/login">Log in</a>
+                Sign in with Reddit: <a class="btn btn-primary" href="/login">Log in</a>
             </div>
         </div>
         <div class="container" sec:authorize="isAuthenticated()">
