--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
         <meta name="description" content=""/>
         <meta name="viewport" content="width=device-width" />
         <base href="/"/>
-        <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/4.2.1/css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="/css/signin.css" />
         <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
         <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
