--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,4 +1,13 @@
 body {
-  background-color: #f5f5f5;
+    background-color: #f5f5f5;
+}
+
+.footer {
+    position:absolute;
+    bottom: 0;
+}
+
+.card {
+    min-width: 16rem;
 }
 
