Database integrated, packages restructured

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,7 +74,7 @@
             </div>
         </div>
 
-        <!-- The Modal -->
+        <!-- Validation required modal -->
         <div class="modal" id="modalValidate">
             <div class="modal-dialog">
                 <div class="modal-content">
