--- a/src/main/resources/templates/IndexOld.html
+++ b/src/main/resources/templates/IndexOld.html
@@ -5,27 +5,135 @@
         <title>Flairbot Alpha</title>
         <meta name="description" content=""/>
         <meta name="viewport" content="width=device-width" />
-        <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/4.2.1/css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="/css/index.css" />
+        <!-- <link rel="stylesheet" href="/webjars/font-awesome/5.7.2/css/all.css" /> -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+        <!-- 2 hours wasted to learn that the order of js imports are important apparently -->
         <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-        <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/webjars/popper.js/1.14.3/umd/popper.min.js"></script>
+        <script src="/webjars/bootstrap/4.2.1/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div class="container" sec:authorize="!isAuthenticated()">
-            <div>
-                Sign in with Reddit: <a class="btn btn-primary" href="/login">Log in</a>
+        <script>
+            $(document).ready(function () {
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+        </script>
+
+        <div class="d-flex bg-dark border-bottom shadow p-2 px-md-4 mb-3 align-items-center">
+            <a class="navbar-brand text-light" href="/">Summoner School Flairs</a>
+            <btn class="mr-md-auto ml-1 btn btn-success" data-toggle="modal" data-target="#newSummoner">New Summoner</btn>
+            <h6 class="mr-3 mt-1 font-weight-light text-light" th:text="${#authentication.getUserAuthentication().getDetails().get('name')}"></h6>
+            <a class="btn btn-md btn-danger" href="/logout">Log out</a>
+        </div>
+
+        <!-- New summoner modal -->
+        <div class="modal fade" id="newSummoner">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Modal Heading</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="summonerName">Summoner Name</label>
+                                <input type="text" class="form-control" id="summonerName">
+                            </div>
+                            <div class="form-group">
+                                <label for="region">Region</label>
+                                <select class="form-control" id="region">
+                                    <option>EUNE</option>
+                                    <option>EUW</option>
+                                    <option>NA</option>
+                                    <option>BR</option>
+                                    <option>LAN</option>
+                                    <option>LAS</option>
+                                    <option>JP</option>
+                                    <option>KR</option>
+                                    <option>OCE</option>
+                                    <option>RU</option>
+                                    <option>TR</option>
+                                </select>
+                            </div>
+                        </form>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Register</button>
+                    </div>
+
+                </div>
             </div>
         </div>
-        <div class="container" sec:authorize="isAuthenticated()">
-            Logged in as:
-            <span th:text ="${#authentication.getUserAuthentication().getDetails().get('name')}"></span>
-            <form th:action="@{/logout}" method="post"> 
-                <input class="btn btn-primary" type="submit" value="Logout"/> 
-            </form>
-            <div sec:authorize="hasRole('USER')">Text visible to user.</div>
-            <div sec:authorize="hasRole('ADMIN')">Text visible to admin.</div>
-            <div sec:authorize="isAuthenticated()">
-                Text visible only to authenticated users.
+
+        <!-- Validation required modal -->
+        <div class="modal" id="modalValidate">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h5 class="modal-title">Validate Summoner</h5>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <p>To validate <strong>Garbage (EUW)</strong>, set your third-party validation code to the following:</p>
+                        <blockquote class="blockquote text-center">82BOX</blockquote>
+                        <p>Once your code is updated, validation will typically happen in an hour or two.</p>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div class="row w-100 pl-4">
+            <div class="card m-1">
+                <div class="card-body">
+                    <h5 class="card-title">Trefort</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">EUW</h6>
+                    <div class="d-flex align-items-center">
+                        <span class="text-success mr-auto "><i class="fas fa-check"></i> Validated</span>
+                        <btn class="btn btn-sm btn-danger ml-2" href="/" data-toggle="tooltip" title="Delete"><i class="fas fa-trash-alt"></i></btn>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card m-1">
+                <div class="card-body">
+                    <h5 class="card-title">Trefort</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">EUW</h6>
+                    <div class="d-flex align-items-center">
+                        <span class="mr-auto" data-toggle="modal" data-target="#modalValidate">
+                            <btn class="btn btn-sm btn-warning" href="/" data-toggle="tooltip" title="Click to validate"><i class="fas fa-exclamation-triangle"></i> Validation required</btn>
+                        </span>
+                        <btn class="btn btn-sm btn-danger mr-0 ml-1" href="/" data-toggle="tooltip" title="Delete"><i class="fas fa-trash-alt"></i></btn>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card m-1">
+                <div class="card-body">
+                    <h5 class="card-title">Trefort</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">EUW</h6>
+                    <div class="d-flex align-items-center">
+                        <btn class="btn btn-sm btn-danger mr-auto" href="/"><i class="fas fa-times"></i> Validation failed</btn>
+                        <btn class="btn btn-sm btn-danger mr-0 ml-1" href="/" data-toggle="tooltip" title="Delete"><i class="fas fa-trash-alt"></i></btn>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <footer class="footer d-flex flex-row-reverse w-100 bg-dark p-2 ">
+            <p class="text-muted mr-1 mb-0">Report bugs on Discord: Thorasine#4073, Reddit: /u/Thorasine</p>
+        </footer>
     </body>
 </html>
