--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,38 +39,38 @@
                         <h4 class="modal-title">Modal Heading</h4>
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
+                    <form action="#" th:action="@{/newSummoner}" th:object="${user}" method="post">
+                        <!-- Modal body -->
+                        <div class="modal-body">
 
-                    <!-- Modal body -->
-                    <div class="modal-body">
-                        <form>
                             <div class="form-group">
                                 <label for="summonerName">Summoner Name</label>
-                                <input type="text" class="form-control" id="summonerName">
+                                <input th:field="*{summonerName}" type="text" class="form-control" id="summonerName">
                             </div>
                             <div class="form-group">
                                 <label for="region">Region</label>
-                                <select class="form-control" id="region">
-                                    <option>EUNE</option>
-                                    <option>EUW</option>
-                                    <option>NA</option>
-                                    <option>BR</option>
-                                    <option>LAN</option>
-                                    <option>LAS</option>
-                                    <option>JP</option>
-                                    <option>KR</option>
-                                    <option>OCE</option>
-                                    <option>RU</option>
-                                    <option>TR</option>
+                                <select th:field="*{server}" class="form-control" id="region">
+                                    <option th:value="'EUNE'">EUNE</option>
+                                    <option th:value="'EUW'">EUW</option>
+                                    <option th:value="'NA'">NA</option>
+                                    <option th:value="'BR'">BR</option>
+                                    <option th:value="'LAN'">LAN</option>
+                                    <option th:value="'LAS'">LAS</option>
+                                    <option th:value="'JP'">JP</option>
+                                    <option th:value="'KR'">KR</option>
+                                    <option th:value="'OCE'">OCE</option>
+                                    <option th:value="'RU'">RU</option>
+                                    <option th:value="'TR'">TR</option>
                                 </select>
                             </div>
-                        </form>
-                    </div>
 
-                    <!-- Modal footer -->
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Register</button>
-                    </div>
+                        </div>
 
+                        <!-- Modal footer -->
+                        <div class="modal-footer">
+                            <input class="btn btn-primary" type="submit" data-dismiss="newSummoner" value="Register" />
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
                     <!-- Modal Header -->
                     <div class="modal-header">
                         <h5 class="modal-title">Validate Summoner</h5>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <button type="button" class="close" data-dismiss="modalValidate">&times;</button>
                     </div>
 
                     <!-- Modal body -->
@@ -104,7 +104,7 @@
                     <!-- Modal Header -->
                     <div class="modal-header">
                         <h5 class="modal-title">Delete Summoner?</h5>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <button type="button" class="close" data-dismiss="deleteSummoner">&times;</button>
                     </div>
 
                     <!-- Modal body -->
@@ -112,7 +112,7 @@
                         <p>Are you sure you want to delete <strong>Garbage (EUW)</strong>?</p>
                         <div class="d-flex justify-content-end">
                             <btn class="btn btn-sm btn-danger">Delete</btn>
-                            <btn class="btn btn-sm btn-secondary mr-0 ml-1">Cancel</btn>
+                            <btn class="btn btn-sm btn-secondary mr-0 ml-1" data-dismiss="modal">Cancel</btn>
                         </div>
                     </div>
                 </div>
