Implemented new Summoner button

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-        <script src="/js/main.js"></script>
+        <script src="/js/test.js"></script>
         <meta name="_csrf" th:content="${_csrf.token}"/>
         <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     </head>
