--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,9 @@
         <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
         <script src="/webjars/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="/webjars/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+        <script src="/js/main.js"></script>
+        <meta name="_csrf" th:content="${_csrf.token}"/>
+        <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     </head>
     <body>
         <script>
@@ -24,13 +27,13 @@
         <!-- Header bar -->
         <div class="d-flex bg-dark border-bottom shadow p-2 px-md-4 mb-3 align-items-center">
             <a class="navbar-brand text-light" href="/">Summoner School Flairs</a>
-            <btn class="mr-md-auto ml-1 btn btn-success" data-toggle="modal" data-target="#newSummoner">New Summoner</btn>
+            <btn class="mr-md-auto ml-1 btn btn-success" data-toggle="modal" data-target="#newSummonerModal">New Summoner</btn>
             <h6 class="mr-3 mt-1 font-weight-light text-light" th:text="${#authentication.getUserAuthentication().getDetails().get('name')}"></h6>
             <a class="btn btn-md btn-danger" href="/logout">Log out</a>
         </div>
 
         <!-- New summoner modal -->
-        <div class="modal fade" id="newSummoner">
+        <div class="modal fade" id="newSummonerModal">
             <div class="modal-dialog">
                 <div class="modal-content">
 
@@ -39,7 +42,7 @@
                         <h4 class="modal-title">Modal Heading</h4>
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
-                    <form action="#" th:action="@{/newSummoner}" th:object="${user}" method="post">
+                    <form id="newSummonerForm" action="#" th:object="${user}" method="post">
                         <!-- Modal body -->
                         <div class="modal-body">
 
@@ -68,7 +71,7 @@
 
                         <!-- Modal footer -->
                         <div class="modal-footer">
-                            <input class="btn btn-primary" type="submit" data-dismiss="newSummoner" value="Register" />
+                            <input id="newSummonerBtn" class="btn btn-primary" type="button" data-dismiss="//todo" value="Register" />
                         </div>
                     </form>
                 </div>
@@ -119,25 +122,25 @@
             </div>
         </div>
 
-        <div class="row w-100 pl-4">
-
-            <div th:each="user : ${users}" class="card m-1" th:id="${user.id}">
-                <div class="card-body">
-                    <h5 th:text=${user.getSummonerName()} class="card-title"></h5>
-                    <h6 th:text=${user.getServer()} class="card-subtitle mb-2 text-muted"></h6>
-                    <div th:switch="${user.getValidated()}" class="d-flex align-items-center">
-                        <span th:case="'validated'" class="text-success mr-auto"><i class="fas fa-check"></i> Validated</span>
-                        <span th:case="'pending'" class="mr-auto" data-toggle="modal" data-target="#modalValidate">
-                            <btn class="btn btn-sm btn-warning" href="/" data-toggle="tooltip" title="Click to validate"><i class="fas fa-exclamation-triangle"></i> Validation required</btn>
-                        </span>
-                        <btn th:case="'failed'" class="btn btn-sm btn-danger mr-auto" href="/"><i class="fas fa-times"></i> Validation failed</btn>
-                        <span class="mr-0 ml-1" data-toggle="modal" data-target="#deleteSummoner">
-                            <btn class="btn btn-sm btn-danger" href="/" data-toggle="tooltip" title="Delete"><i class="fas fa-trash-alt"></i></btn>
-                        </span>
+        <div id="container">
+            <div id="cardsContainer" class="row w-100 pl-4">
+                <div th:each="user : ${users}" class="card m-1" th:id="${user.id}">
+                    <div class="card-body">
+                        <h5 th:text=${user.getSummonerName()} class="card-title"></h5>
+                        <h6 th:text=${user.getServer()} class="card-subtitle mb-2 text-muted"></h6>
+                        <div th:switch="${user.getValidated()}" class="d-flex align-items-center">
+                            <span th:case="'validated'" class="text-success mr-auto"><i class="fas fa-check"></i> Validated</span>
+                            <span th:case="'pending'" class="mr-auto" data-toggle="modal" data-target="#modalValidate">
+                                <btn class="btn btn-sm btn-warning" href="/" data-toggle="tooltip" title="Click to validate"><i class="fas fa-exclamation-triangle"></i> Validation required</btn>
+                            </span>
+                            <btn th:case="'failed'" class="btn btn-sm btn-danger mr-auto" href="/"><i class="fas fa-times"></i> Validation failed</btn>
+                            <span class="mr-0 ml-1" data-toggle="modal" data-target="#deleteSummoner">
+                                <btn class="btn btn-sm btn-danger" href="/" data-toggle="tooltip" title="Delete"><i class="fas fa-trash-alt"></i></btn>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
-
         </div>
         <footer class="footer d-flex flex-row-reverse w-100 bg-dark p-2 ">
             <p class="text-muted mr-1 mb-0">Discord: Thorasine#4073, Reddit: /u/Thorasine</p>
