--- a/src/main/resources/templates/indexCopy.html
+++ b/src/main/resources/templates/indexCopy.html
@@ -121,7 +121,7 @@
 
         <div class="row w-100 pl-4">
 
-            <div th:each="user : ${users}" class="card m-1">
+            <div th:each="user : ${users}" class="card m-1" th:id="${user.id}">
                 <div class="card-body">
                     <h5 th:text=${user.getSummonerName()} class="card-title"></h5>
                     <h6 th:text=${user.getServer()} class="card-subtitle mb-2 text-muted"></h6>
@@ -140,7 +140,7 @@
 
         </div>
         <footer class="footer d-flex flex-row-reverse w-100 bg-dark p-2 ">
-            <p class="text-muted mr-1 mb-0">Report bugs on Discord: Thorasine#4073, Reddit: /u/Thorasine</p>
+            <p class="text-muted mr-1 mb-0">Discord: Thorasine#4073, Reddit: /u/Thorasine</p>
         </footer>
     </body>
 </html>
