--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,58 +24,14 @@
             });
         </script>
 
+        <div id="modalContainer" class="modal fade"></div>
+
         <!-- Header bar -->
         <div class="d-flex bg-dark border-bottom shadow p-2 px-md-4 mb-3 align-items-center">
             <a class="navbar-brand text-light" href="/">Summoner School Flairs</a>
-            <btn class="mr-md-auto ml-1 btn btn-success" data-toggle="modal" data-target="#newSummonerModal">New Summoner</btn>
+            <btn id="newSummonerModalBtn" class="mr-md-auto ml-1 btn btn-success" data-toggle="modal" data-target="#newSummonerModal">New Summoner</btn>
             <h6 class="mr-3 mt-1 font-weight-light text-light" th:text="${#authentication.getUserAuthentication().getDetails().get('name')}"></h6>
             <a class="btn btn-md btn-danger" href="/logout">Log out</a>
-        </div>
-
-        <!-- New summoner modal -->
-        <div class="modal fade" id="newSummonerModal">
-            <div class="modal-dialog">
-                <div class="modal-content">
-
-                    <!-- Modal Header -->
-                    <div class="modal-header">
-                        <h4 class="modal-title">Modal Heading</h4>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    </div>
-                    <form id="newSummonerForm" action="#" th:object="${user}" method="post">
-                        <!-- Modal body -->
-                        <div class="modal-body">
-
-                            <div class="form-group">
-                                <label for="summonerName">Summoner Name</label>
-                                <input th:field="*{summonerName}" type="text" class="form-control" id="summonerName">
-                            </div>
-                            <div class="form-group">
-                                <label for="region">Region</label>
-                                <select th:field="*{server}" class="form-control" id="region">
-                                    <option th:value="'EUNE'">EUNE</option>
-                                    <option th:value="'EUW'">EUW</option>
-                                    <option th:value="'NA'">NA</option>
-                                    <option th:value="'BR'">BR</option>
-                                    <option th:value="'LAN'">LAN</option>
-                                    <option th:value="'LAS'">LAS</option>
-                                    <option th:value="'JP'">JP</option>
-                                    <option th:value="'KR'">KR</option>
-                                    <option th:value="'OCE'">OCE</option>
-                                    <option th:value="'RU'">RU</option>
-                                    <option th:value="'TR'">TR</option>
-                                </select>
-                            </div>
-
-                        </div>
-
-                        <!-- Modal footer -->
-                        <div class="modal-footer">
-                            <input id="newSummonerBtn" class="btn btn-primary" type="button" data-dismiss="//todo" value="Register" />
-                        </div>
-                    </form>
-                </div>
-            </div>
         </div>
 
         <!-- Validation required modal -->
@@ -86,7 +42,7 @@
                     <!-- Modal Header -->
                     <div class="modal-header">
                         <h5 class="modal-title">Validate Summoner</h5>
-                        <button type="button" class="close" data-dismiss="modalValidate">&times;</button>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
 
                     <!-- Modal body -->
@@ -122,24 +78,10 @@
             </div>
         </div>
 
+        <!-- Card containers -->
         <div id="container">
             <div id="cardsContainer" class="row w-100 pl-4">
-                <div th:each="user : ${users}" class="card m-1" th:id="${user.id}">
-                    <div class="card-body">
-                        <h5 th:text=${user.getSummonerName()} class="summonerName card-title"></h5>
-                        <h6 th:text=${user.getServer()} class="server card-subtitle mb-2 text-muted"></h6>
-                        <div th:switch="${user.getValidated()}" class="d-flex align-items-center">
-                            <span th:case="'validated'" class="text-success mr-auto"><i class="fas fa-check"></i> Validated</span>
-                            <span th:case="'pending'" class="mr-auto" data-toggle="modal" data-target="#modalValidate">
-                                <btn class="btn btn-sm btn-warning" href="/" data-toggle="tooltip" title="Click to validate"><i class="fas fa-exclamation-triangle"></i> Validation required</btn>
-                            </span>
-                            <btn th:case="'failed'" class="btn btn-sm btn-danger mr-auto" href="/"><i class="fas fa-times"></i> Validation failed</btn>
-                            <span class="deleteBtnSpan mr-0 ml-1" data-toggle="modal" data-target="#deleteSummoner">
-                                <btn class="btn btn-sm btn-danger" data-toggle="tooltip" title="Delete"><i class="fas fa-trash-alt"></i></btn>
-                            </span>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
         <footer class="footer d-flex flex-row-reverse w-100 bg-dark p-2 ">
