--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -2,9 +2,12 @@ body {
     background-color: #f5f5f5;
 }
 
-.footer {
-    position:absolute;
-    bottom: 0;
+html, body {
+    height:100%;
+}
+
+#container {
+    min-height: 100%;
 }
 
 .card {
