--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,7 +11,7 @@
                 <h6 th:text=${user.getServer()} class="server card-subtitle mb-2 text-muted"></h6>
                 <div th:switch="${user.getValidated()}" class="d-flex align-items-center">
                     <span th:case="'validated'" class="text-success mr-auto"><i class="fas fa-check"></i> Validated</span>
-                    <span th:case="'pending'" data-th-attr="validation-code=${user.ValidationCode}" class="mr-auto" data-toggle="modal" data-target="#modalValidate">
+                    <span th:case="'pending'" data-th-attr="validation-code=${user.ValidationCode}" class="validationModalOpenBtn mr-auto" data-toggle="modal" data-target="#modalValidate">
                         <btn class="btn btn-sm btn-warning" href="/" data-toggle="tooltip" title="Click to validate"><i class="fas fa-exclamation-triangle"></i> Validation required</btn>
                     </span>
                     <btn th:case="'failed'" class="btn btn-sm btn-danger mr-auto" href="/"><i class="fas fa-times"></i> Validation failed</btn>
